--- a/Slovak/main/MiuiBluetooth.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiBluetooth.apk/res/values-sk/strings.xml
@@ -238,4 +238,5 @@ Rýchlejšie pripojenie."</string>
      <string name="headset_incall_reject">Zrušiť</string>
      <string name="headset_incall_summary">Prijať hovor na %1$s pomocou slúchadiel? Po skončení hovoru zostanú vaše slúchadlá pripojené k tomuto zariadeniu.</string>
      <string name="headset_incall_title">Prijmite hovor pomocou slúchadiel</string>    
+	<string name="fast_connect_connection_fail">Nebolo možné sa pripojiť</string>	 
 </resources>
