--- a/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
@@ -708,4 +708,60 @@
     <string name="widget_quick_function">Skratky</string>
     <string name="widgets_preview_title">Pridať widget</string>
     <string name="yesterday">Včera</string>
+	
+<string name="Icon_name_classic_mode">Nastavenia plochy</string>
+    <string name="accessibility_recent_task_show_menu">Viac možností</string>
+    <string name="accessibility_recents_item_dismissed">%1$s vymazané</string>
+    <string name="agree_button">Súhlasím</string>
+    <string name="animation_rate_title">Rýchlosť animácie</string>
+    <string name="app_drawer_double_confirm_description">Týmto sa zmení rozloženie vašej plochy. Tieto zmeny budete môcť neskôr vrátiť v Nastaveniach.</string>
+    <string name="app_drawer_double_confirm_title">Pozor</string>
+    <string name="app_drawer_feature_description">Zoznam aplikácií je dokonalým nástrojom na usporiadanie všetkých aplikácií. Automaticky kategorizujte aplikácie a rýchlo nájdite všetko, čo potrebujete!</string>
+    <string name="app_drawer_guide_description">Nájdite to, čo hľadáte vo svojich obľúbených aplikáciách</string>
+    <string name="app_drawer_guide_title">Zoznam aplikácií</string>
+    <string name="app_drawer_tip_title">Informačný kanál obsahu sme nahradili zoznamom aplikácií.</string>
+    <string name="app_install_state">Nainštalované</string>
+    <string name="branch_core_version">Základná verzia</string>
+    <string name="branch_deepview_button">Získať aplikáciu</string>
+    <string name="branch_deepview_button_description">Zobraziť tento obsah ihneď po inštalácii</string>
+    <string name="branch_feature_description">Okrem aplikácií dokáže Quick Finder nájsť obsah v aplikácii a položky online.</string>
+    <string name="branch_guide_attention">Používanie rozšíreného vyhľadávania vyžaduje zdieľanie vašich údajov na vyhľadávanie, Google Ads ID a IP adresy so spoločnosťou Branch Metrics Inc. Prečítajte si a vyjadrite súhlas s <a href="http://url1"><font color=" #B3000000">Podmienkami používania</font></a> a <a href="http://url2"><font color="#B3000000">Ochranou súkromia</font></a> pred použitím tejto funkcie.</a></string>
+    <string name="branch_guide_description_one">Všetky vaše aplikácie umiestnime do zásuvky aplikácií. Vaša plocha bude vyzerať elegantne a usporiadane.</string>
+    <string name="branch_guide_description_three">Vďaka vstavanému vyhľadávaniu budete môcť rýchlo nájsť všetko, čo potrebujete!</string>
+    <string name="branch_guide_description_two">Zoznam aplikácií automaticky kategorizuje aplikácie.</string>
+    <string name="branch_guide_tip_title">Každá aplikácia na svojom mieste</string>
+    <string name="branch_guide_title">Zoznam aplikácie Meet</string>
+    <string name="branch_guide_type_four_desc">Môžete sa vrátiť k starým spôsobom jediným klepnutím</string>
+    <string name="branch_guide_type_four_main">V \"Nastavenia\" - \"Domovská obrazovka\" prepínajte medzi dvoma režimami.</string>
+    <string name="branch_guide_type_four_step_one">Krok 1: kliknite na položku \"Nastavenia\"</string>
+    <string name="branch_guide_type_four_step_two">Krok 2: kliknite na \"Domovská obrazovka\"</string>
+    <string name="branch_guide_type_one_desc">Zoznam aplikácií vám pomôže spravovať vašu aplikáciu</string>
+    <string name="branch_guide_type_one_main">Všetky vaše aplikácie umiestnime do zásuvky aplikácií. Zabudované vyhľadávanie vám pomôže rýchlo nájsť čokoľvek, čo potrebujete!</string>
+    <string name="branch_new_feature">Nová funkcia</string>
+    <string name="branch_privacy_policy">Zásady ochrany osobných údajov</string>
+    <string name="branch_search_guide_description">Naše výsledky vyhľadávania sú teraz oveľa komplexnejšie</string>
+    <string name="branch_search_guide_privacy">"Túto službu používa spoločnosť Branch Metrics Inc. Informácie o vašej polohe, vyhľadávacie dopyty a Google Ads ID budú zdieľané s pobočkou. Prečítajte si a vyjadrite súhlas s "<a href="http:// url1"><font color="#B3000000">Zmluvné podmienky</font></a> a <a href="http://url2"><font color="#B3000000">Zásady ochrany osobných údajov</font </a> pred použitím tejto služby.</string>
+    <string name="branch_search_guide_title">Nájdite to, čo hľadáte vo svojich obľúbených aplikáciách</string>
+    <string name="branch_terms_condition">Zmluvné podmienky</string>
+    <string name="branch_tip_title">Pomocou Quick Finder nájdete všetko, čo potrebujete, v okamihu.</string>
+    <string name="branch_ui_version">Verzia používateľského rozhrania pobočky</string>
+    <string name="btn_agree">Súhlasím</string>
+    <string name="btn_cancel">Zrušiť</string>
+    <string name="btn_close">Vypnúť</string>
+    <string name="btn_open">Zapnúť</string>
+    <string name="btn_request_permission">Udeliť povolenia</string>
+    <string name="btn_set_right_now">Udeliť povolenia</string>
+    <string name="cancel_botton">Zrušiť</string>
+    <string name="close_multi_finger_slide_summary">Tieto gestá budú v niektorých scenároch ignorované (napr. prehrávanie hier a videí)</string>
+    <string name="close_multi_finger_slide_title">"Nereagujte na gestá tromi a štyrmi prstami"</string>
+<string name="common_google_play_services_unknown_issue">%1$s má problém so službami Google Play. Skúste to znova.</string>
+<string name="drag_icon_to_homescreen_guide">Stlačte a podržte ikonu aplikácie a potom ju presuňte a pridajte odkaz na plochu</string>
+    <string name="enter_search_setting_title">Po otvorení zoznamu aplikácií otvoriť vyhľadávanie</string>
+    <string name="exit_overview_because_task_stack_changed">Zatvorené Nedávne z dôvodu zmien, ku ktorým došlo na pozadí</string>
+<string name="got_it_botton">Rozumiem</string>
+     <string name="guide_permission_title">Vyžadujú sa povolenia</string>
+     <string name="guide_privacy_dialog_title">Zmluvné podmienky</string>
+    <string name="layout_guide_description">Ak sa vám nepáči zoznam aplikácií, vždy sa môžete vrátiť na klasickú plochu. Stačí použiť skratku \"Nastavenia plochy\" a prepínať medzi týmito dvoma režimami.</string>
+     <string name="layout_guide_tip_title">Môžete sa vrátiť k starému spôsobu jediným klepnutím</string>
+     <string name="layout_guide_title">Ako odstrániť zásuvku aplikácie</string>
 </resources>
