--- a/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
@@ -594,4 +594,78 @@
     <string name="word_translation">Preklad slova</string>
     <string name="yesterday">Včera</string>
     <string name="you_id">"Vaše ID: "</string>
+	
+    <string name="all_text">Full text</string>
+    <string name="already_ocr_result">Selected items automatically</string>
+    <string name="continue_video">Scan</string>
+    <string name="copy_text_fail">Copy failed, please open the clipboard permission</string>
+    <string name="copy_text_faile">"Couldn't copy. Allow Scanner to access the clipboard first."</string>
+    <string name="crop_and_create">Cropping and creating Excel file…</string>
+    <string name="dis_select_all">Deselect all</string>
+    <string name="document_ocr_fail_no_text">"Couldn't recognize text. Select again and start over."</string>
+    <string name="document_region_tips">Auto select</string>
+    <string name="editor_form">Edit</string>
+    <string name="error_not_found_excel_activity">"Couldn't find an app to open Excel files"</string>
+    <string name="examples_form_guide">How to scan tables</string>
+    <string name="examples_text_guide">How to scan text</string>
+    <string name="form_demo_dialog_negative">Tap to scan the table, then export as an Excel file.</string>
+    <string name="form_excel_save_sucess">Saved Excel file successfully</string>
+    <string name="form_recognition_crop_hint">Make sure the corners of the table are inside the selected area</string>
+    <string name="history_list_is_empty2">Documents you scan will appear here.</string>
+    <string name="how_to_scan_form">How to scan tables</string>
+    <string name="immediately_try">Scan</string>
+    <string name="immediately_try_video">Scan</string>
+    <string name="intelligent_participle">Phrases</string>
+    <string name="module_title_form">Table</string>
+    <string name="module_title_new_document">Scan doc</string>
+    <string name="not_identification_form">"Couldn't recognize table. Select again and start over."</string>
+    <string name="not_network">"Couldn't connect to the network. Wait a minute or two and try again."</string>
+    <string name="ocr_plant_loading">Just a sec…</string>
+    <string name="open_file_error">"Couldn't open file"</string>
+    <string name="recognition_form_fail_10010">"Error 010: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_1003">"Error 003: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_1005">"Error 005: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_1006">"Error 006: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_1007">"Error 007: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_1008">"Error 008: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_400">"Error 400: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_40010004">"Error 0004: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_40021101">"Error 1101: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_40021102">"Error 1102: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_403">"Couldn't recognize. This file is too big."</string>
+    <string name="recognition_form_fail_50021100">"Error 1100: Couldn't recognize. Wait a minute or two and try again."</string>
+    <string name="recognition_form_fail_50021102">"Couldn't recognize table. Select again and start over."</string>
+    <string name="recognition_form_fail_504">Request timed out. Wait a minute or two and try again.</string>
+    <string name="recognition_historical_date_create_time">"Created on "</string>
+    <string name="recognition_historical_no_document">Nothing here yet.</string>
+    <string name="recognition_historical_no_form">Nothing here yet.</string>
+    <string name="recognition_historical_no_text">Nothing here yet.</string>
+    <string name="recognition_history">History</string>
+    <string name="save_excel_result_title">Save</string>
+    <string name="save_excel_title">Save Excel file</string>
+    <string name="save_word">Save</string>
+    <string name="scan_document_top_tip">Scan a physical document and create a PDF</string>
+    <string name="scan_document_top_tip_second">Scan multiple documents and create one PDF</string>
+    <string name="scan_form">Scan table</string>
+    <string name="scan_form_top_tip">Scan, save, and edit tables</string>
+    <string name="scan_general_top_tip">Recognize plants, people, and products</string>
+    <string name="scan_support_type_new">Scan QR code or barcode</string>
+    <string name="scan_text">Scan text</string>
+    <string name="scan_text_top_tip">Recognize and copy text</string>
+    <string name="scan_translate_top_tip">Translate all text in a photo</string>
+    <string name="screenshot_copy_text">Copy text</string>
+    <string name="screenshot_save_image">Save image</string>
+    <string name="screenshot_save_image_error">"Couldn't save image"</string>
+    <string name="screenshot_save_image_success">Saved image successfully</string>
+    <string name="screenshot_shared_image">Share image</string>
+    <string name="screenshot_translation_running">Translating…</string>
+    <string name="share_error">"Couldn't share"</string>
+    <string name="text_extraction_demo_dialog_title">Tap to recognize and copy text</string>
+    <string name="to_date">Today</string>
+    <string name="translate_export">Export</string>
+    <string name="translate_long_screen">Scrolling translation</string>
+    <string name="use_presentation_file">Demo</string>
+    <string name="view_origin_text">Original text</string>
+    <string name="word_is_being_saved">Saving Word document…</string>
+    <string name="word_save_sucess">Saved Word document successfully</string>	
 </resources>
